src/np222kk/dv507/a2/test/cases/positive/test_attributesaccess_01.ofp
void main() {

    char[] cArr = new char[2];
    int i = cArr.length;

    int[] iArr = new int[2];
    i = iArr.length;

    float[] fArr = new float[2];
    i = fArr.length;

    string s = "Test";
    i = s.length;
}