src/np222kk/dv507/a2/test/cases/negative/test_equals_02.ofp
void main() {
    int[] iArr = new int[1];
    if (iArr == iArr) {  }
}